Rework model for storing surface material information, add behavior to configure a surface's material, update and improve material editor, several other improvements